# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  configuration.json
.github/workflows/: general.yml
configuration/: base.json  local.json  production.json
migrations/: 20230919061825_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
